k8s_monitoring_ha/grafana/grafana-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 2
  serviceName: "grafana"
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - grafana
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: grafana
          securityContext:
            runAsUser: 472
            runAsGroup: 472
          image: grafana/grafana:10.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "150m"
              memory: "200Mi"

          # Kiểm tra Grafana đã sẵn sàng phục vụ chưa
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          # Kiểm tra Grafana còn hoạt động hay đã bị treo
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: provisioning
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
      volumes:
        - name: provisioning
          configMap:
            name: grafana-provisioning
  volumeClaimTemplates:
    - metadata:
        name: grafana-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "monitoring-storage"
        resources:
          requests:
            storage: 1Gi
