k8s_monitoring_ha/grafana/postgres-sts.yaml
# StatefulSet cho PostgreSQL (Phương án Single-Node truyền thống hoặc Fallback)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-monitoring
  namespace: monitoring
spec:
  replicas: 1
  serviceName: "postgres-monitoring"
  selector:
    matchLabels:
      app: postgres-monitoring
  template:
    metadata:
      labels:
        app: postgres-monitoring
    spec:
      # Thiết lập quyền hạn cho user 'postgres' (ID 999) trên Volume
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432 # Cổng chuẩn của PostgreSQL
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  
  # Yêu cầu cấp phát ổ đĩa bền vững
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "monitoring-storage"
      resources:
        requests:
          storage: 1Gi
---
# Service truy cập Database ClusterIP nội bộ
apiVersion: v1
kind: Service
metadata:
  name: postgres-monitoring
  namespace: monitoring
spec:
  selector:
    app: postgres-monitoring
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
