k8s_monitoring_ha/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.org/force-ssl-redirect: "true"

    nginx.org/proxy-buffer-size: "16k"
    nginx.org/proxy-buffers-number: "4"
    nginx.org/proxy-busy-buffers-size: "16k"

    nginx.org/proxy-connect-timeout: "10s"
    nginx.org/proxy-read-timeout: "600s"
    nginx.org/proxy-send-timeout: "600s"

    nginx.org/real-ip-header: "X-Forwarded-For"
    nginx.org/real-ip-recursive: "true"

    nginx.org/server-snippet: |
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header X-Forwarded-Host $host;

spec:
  ingressClassName: nginx
  rules:
    - host: grafana.vnpost.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
